# Academix.io

./: .gitignore  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt  youtube_cookies.txt
.streamlit/: config.toml
app/: llm.py
backend/: main.py  nixpacks.toml  requirements.txt
backend/app/: llm.py  report_exporter.py
docs/: architecture.md  generate_architecture_diagram.py
frontend/: deploy.sh  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/components/: Layout.tsx  Notifications.tsx  ParticleBackground.tsx
frontend/src/pages/: _app.tsx  history.tsx  index.tsx  report.tsx  settings.tsx  transcribe.tsx
frontend/src/store/: taskStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
src/cua/: crew.py  main.py  memory.py  utils.py
src/cua/config/: agents.yaml  tasks.yaml
src/cua/tools/: __init__.py  citation_finder_tool.py  code_compiler_tool.py  data_viz_tool.py  grammar_checker_tool.py  image_creator_tool.py  lab_report_generator_tool.py  latex_renderer_tool.py  notion_tool.py  octave_api_tool.py  octave_online_tool.py  plagiarism_checker_tool.py  smart_pdf_parser_tool.py  web_search_tool.py  wolfram_tool.py  youtube_transcript_tool.py  youtube_video_downloader_tool.py
src/cua/tools/advanced_bypass/: __init__.py  browser_emulator.py  config.py  manager.py  monitoring.py  proxy_manager.py
tests/: audioScript.py  youtubedownload.py
